fixed horizontal scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,6 @@ code {
   align-content: center;
   align-items: center;
   padding-top: 10px;
-  margin: 10px;
 }
 
 @media (max-width: 767px) {
